# service_p

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
app/: Dockerfile  alembic.ini  pyproject.toml
app/alembic/: README  env.py
app/alembic/versions/: 2026_06_16_0842-05bec75acdbc_initial_schema.py  2026_06_16_0843-c308974154c6_seed_test_data.py
app/entrypoints/: api.sh
app/src/: lifespan.py  main.py  routers.py
app/src/application/dto/: auth.py  user.py  webhook.py
app/src/application/interactors/: auth.py  user.py  webhook.py
app/src/application/interfaces/: repos.py  security.py
app/src/domain/: exceptions.py
app/src/domain/entities/: account.py  base.py  payment.py  user.py
app/src/infra/core/: config.py  logger.py
app/src/infra/di/: ioc.py
app/src/infra/resources/database/: manager.py  utils.py
app/src/infra/resources/database/mappers/: account.py  payment.py  user.py
app/src/infra/resources/database/models/: account.py  base.py  payment.py  user.py
app/src/infra/resources/database/models/mixins/: __init__.py  data.py  pk.py
app/src/infra/resources/database/repos/: __init__.py  account.py  payment.py  uow.py  user.py
app/src/infra/security/: jwt.py  password.py  signature.py
app/src/presentation/http/: authentication.py  error_handlers.py
app/src/presentation/http/v1/handlers/: admin.py  auth.py  users.py  webhooks.py
app/src/presentation/http/v1/mappers/: account.py  payment.py  user.py
app/src/presentation/http/v1/schemas/: account.py  auth.py  payment.py  user.py  webhook.py
envs/: app.env.template  postgres.env.template
